# mcp-server-google-analytics

./: .gitignore  README.md  claude-config-local.json  examples.md  pyproject.toml  requirements.txt  run_local.py  setup.sh
src/mcp_server_google_analytics/: __init__.py  __main__.py  admin.py  coordinator.py  metadata.py  prompts.py  realtime.py  reporting.py  resources.py  server.py  server_backup.py  utils.py
